[gd_scene load_steps=2 format=3 uid="uid://bpm3it1du81p5"]

[ext_resource type="Script" uid="uid://cxxchd0yn70b0" path="res://scripts/deathzone.gd" id="1_d28rl"]

[node name="deathzone" type="Area2D"]
script = ExtResource("1_d28rl")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
